# BurstArtifactEvaluation

./: .gitignore  LICENSE  Makefile  README.md  README.txt  aggregate-data.py  pretty_csv.py
burst/: Burst.opam  Makefile  Myth.opam  code_description.txt  codemap.opam  collections.opam  create-default-answers.py  generate-data.py  myStdLib.opam  timbuk.opam  timbukSolving.opam  timbukSpec.opam  unicode.opam  witness
burst/app/: BurstCmdLine.ml  FromSmythConverter.ml  L2SynthesisCaller.ml  MythSynthesisCaller.ml  SmythSynthesisCaller  SmythSynthesizer.ml  ToSmythConverter.ml  dune
burst/benchmarks/io/: bool.decls  bool_always_false.mls  bool_always_true.mls  bool_band.mls  bool_bor.mls  bool_impl.mls  bool_neg.mls  bool_xor.mls  compare.decls  list_append.mls  list_compress.mls  list_concat.mls  list_drop.mls  list_even_parity.mls  list_filter.mls  list_fold.mls  list_hd.mls  (+31 more)
burst/codemap/: buffer.ml  buffer.mli  dune  formatter.ml  formatter.mli  position.ml  position.mli  span.ml  span.mli
burst/collections/: collections.ml  dune  dynArray.ml  dynArray.mli  graph.ml  graph.mli  hashSet.ml  hashSet.mli  hashTable.ml  hashTable.mli  index.mld  list.ml  list.mli  map.ml  map.mli  priorityQueue.ml  priorityQueue.mli  set.ml  set.mli  unionFind.ml  unionFind.mli  vec.ml  vec.mli
burst/manual-data/: io.csv
burst/myStdlib/: HashtblWrapper.ml  algebra.ml  dune  my_hash_cons.ml  my_list_extensions.ml  util.ml
burst/myth/: consts.ml  datastructures.ml  dune  enum.ml  eval.ml  gamma.ml  gen.ml  lang.ml  lexer.mll  log  parser.mly  pp.ml  preproc.ml  preproc.mli  refine.ml  rope.ml  rope.mli  rtree.ml  sigma.ml  synml.ml  synth.ml  timing.ml  timing.mli  translate.ml  typecheck.ml  util.ml
burst/smyth/: desugar.ml  desugar.mli  dune  endpoint.ml  endpoint.mli  lang.ml  params.ml  type.ml  type.mli
burst/src/: Abstraction.ml  AngelicEval.ml  Automata.ml  ClassifiedType.ml  Context.ml  CrazyFTASynthesizer.ml  Declaration.ml  EnumerativeVerifier.ml  Eval.ml  FTAConstructor.ml  InputVerifier.ml  KnowledgeBase.ml  Lang.ml  Param.ml  ParserContainer.ml  Predicate.ml  Prelude.ml  Problem.ml  QC.ml  QuickCheckVerifier.ml  SafeEval.ml  SimpleFTASynthesizer.ml  Synthesizer.ml  Synthesizers.ml  TermClassification.ml  Type.ml  Typecheck.ml  ValueTCIntegration.ml  consts.ml  dune  lexer.mll  parser.mly
burst/timbuk/: automaton.cmti  automaton.ml  automaton.odoc  dune  equation.cmti  equation.ml  equation.odoc  index.mld  intState.cmti  intState.ml  intState.mli  intState.odoc  noLabel.cmti  noLabel.odoc  page-index.odoc  pair.cmti  pair.ml  pair.mli  pair.odoc  pattern.cmti  pattern.ml  pattern.odoc  relation.cmti  relation.ml  relation.mli  relation.odoc  rule.cmti  rule.ml  rule.mli  rule.odoc  stringState.cmti  stringState.ml  stringState.mli  stringState.odoc  stringSymbol.cmti  stringSymbol.ml  stringSymbol.mli  stringSymbol.odoc  substitution.cmti  substitution.ml  (+24 more)
burst/timbukSolving/: cvc4.ml  cvc4.mli  dune  index.mld  smt2.ml  smt2.mli  smt2Lexer.ml  smt2Lexer.mll  smt2Parser.ml  smt2Parser.mli  smt2Parser.mly  solver.ml  solver.mli  timbukSolving.ml
burst/timbukSpec/: FullParse.ml  alphabet.ml  alphabet.mli  ast.ml  dictionary.ml  dictionary.mli  dune  index.mld  lexer.ml  lexer.mli  parse.ml  parse.mli  timbukSpec.ml  userState.ml  userState.mli
burst/unicode/: dune  encoding.ml  encoding.mli  uChar.ml  uChar.mli  uString.ml  uString.mli
(+416 files in other folders)
