opam-version: "1.2"

name: "Burst"
version: "0.6b"

license: "MIT"

available: [ ocaml-version >= "4.04.2" ]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune"          {build & >= "1.1.1"}
  "alcotest"      {test & >= "0.7"}
  "core"          {>= "0.11"}
  "core_extended" {>= "0.11"}
]
